# bbc-to-spotify

./: .gitignore  README.md  flake.nix  pyproject.toml  result
bbc_to_spotify/: __init__.py  authorize.py  cli.py  logging.py  main.py  spotify.py
bbc_to_spotify/authorize/: authorize.py
bbc_to_spotify/authorize/models/: external.py  internal.py
bbc_to_spotify/models/: internal.py  spotify.py
bbc_to_spotify/playlist/: create.py  update.py  utils.py
bbc_to_spotify/scraping/: models.py  scraping.py
bbc_to_spotify/spotify/: spotify.py
bbc_to_spotify/spotify/models/: external.py  internal.py
src/bbc_to_spotify/: __init__.py  authorize.py  cli.py  main.py  scrape.py  scraping.py  spotify.py  station.py  sync.py  utils.py
src/bbc_to_spotify/models/: internal.py
src/bbc_to_spotify/playlist/: update.py  utils.py
