[tool.poetry]
name = "bbc-to-spotify"
version = "0.0.2"
description = "A CLI tool for adding the BBC radio playlist tracks to Spotify playlists."
authors = ["Archie Judd"]
readme = "README.md"
packages = [{include = "bbc_to_spotify"}]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
requests = "^2.31.0"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^24.8.0"

[tool.poetry.scripts]
bbc-to-spotify = "bbc_to_spotify.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
